--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "react-data-table-component": "^7.0.0-rc2",
         "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "react-scroll": "^1.8.2",
-        "styled-components": "^5.3.0"
+        "styled-components": "^5.3.0",
+        "toastr": "^2.1.4"
     }
 }
