--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.13.13",
+        "@babel/preset-react": "^7.14.5",
+        "autoprefixer": "^10.2.6",
         "axios": "^0.21",
-        "bootstrap": "^5.0.0-beta3",
+        "bootstrap": "^5.0.2",
         "jquery": "^3.6",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
+        "laravel-mix": "^6.0.25",
+        "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
-        "postcss": "^8.1.14",
+        "postcss": "^8.3.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass": "^1.35.2",
+        "sass-loader": "^12.1.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.9.2",
+        "@tailwindcss/forms": "^0.3.3",
+        "flatpickr": "^4.6.9",
         "react-data-table-component": "^7.0.0-rc2",
         "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "react-scroll": "^1.8.2",
+        "react-slick": "^0.28.1",
+        "react-transition-group": "^4.4.2",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.0",
         "toastr": "^2.1.4"
     }
