--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "bootstrap": "^5.0.2",
         "chart.js": "^3.4.1",
         "moment": "^2.29.1",
+        "react-bootstrap": "^1.6.1",
         "react-chartjs-2": "^3.0.3",
         "react-data-table-component": "^7.0.0-rc2",
         "react-icons": "^4.2.0",
