--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
         "html-react-parser": "^1.2.7",
         "moment": "^2.29.1",
         "react-bootstrap": "^1.6.1",
+        "react-bootstrap-floating-label": "^1.6.0",
         "react-chartjs-2": "^3.0.3",
         "react-data-table-component": "^7.0.0-rc2",
+        "react-floating-label-textarea": "0.0.1",
         "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "react-scroll": "^1.8.2",
