--- a/package.json
+++ b/package.json
@@ -11,39 +11,38 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.14.5",
-        "autoprefixer": "^10.2.6",
+        "autoprefixer": "^10.3.1",
         "axios": "^0.21",
         "jquery": "^3.6",
-        "laravel-mix": "^6.0.25",
+        "laravel-mix": "^6.0.27",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
-        "postcss": "^8.3.5",
         "prettier": "2.3.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.35.2",
+        "sass": "^1.36.0",
         "sass-loader": "^12.1.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "@popperjs/core": "^2.9.2",
         "bootstrap": "^5.0.2",
-        "chart.js": "^3.4.1",
+        "chart.js": "^3.5.0",
+        "formik": "^2.2.9",
         "html-react-parser": "^1.2.7",
         "moment": "^2.29.1",
-        "react-bootstrap": "^1.6.1",
-        "react-bootstrap-floating-label": "^1.6.0",
-        "react-chartjs-2": "^3.0.3",
+        "react-bootstrap": "^2.0.0-beta.4",
+        "react-chartjs-2": "^3.0.4",
         "react-data-table-component": "^7.0.0-rc2",
-        "react-floating-label-textarea": "0.0.1",
         "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scroll": "^1.8.2",
+        "react-scroll": "^1.8.3",
         "react-slick": "^0.28.1",
         "react-transition-group": "^4.4.2",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.0",
-        "toastr": "^2.1.4"
+        "toastr": "^2.1.4",
+        "yup": "^0.32.9"
     }
 }
