--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-chartjs-2": "^3.0.4",
         "react-data-table-component": "^7.0.0-rc2",
         "react-icons": "^4.2.0",
+        "react-loader-spinner": "^4.0.0",
         "react-router-dom": "^5.2.0",
         "react-scroll": "^1.8.3",
         "react-slick": "^0.28.1",
