--- a/package.json
+++ b/package.json
@@ -10,40 +10,41 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.14.5",
-        "autoprefixer": "^10.3.1",
-        "axios": "^0.21",
+        "@babel/preset-react": "^7.16.7",
+        "autoprefixer": "^10.4.2",
+        "axios": "^0.25",
         "jquery": "^3.6",
-        "laravel-mix": "^6.0.27",
+        "laravel-mix": "^6.0.41",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
-        "prettier": "2.3.2",
+        "prettier": "2.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "resolve-url-loader": "^4.0.0",
-        "sass": "^1.36.0",
-        "sass-loader": "^12.1.0"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.49.0",
+        "sass-loader": "^12.4.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.3",
-        "@popperjs/core": "^2.9.2",
-        "bootstrap": "^5.0.2",
-        "chart.js": "^3.5.0",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@popperjs/core": "^2.11.2",
+        "bootstrap": "^5.1.3",
+        "chart.js": "^3.7.0",
         "formik": "^2.2.9",
-        "html-react-parser": "^1.2.7",
+        "html-react-parser": "^1.4.5",
         "moment": "^2.29.1",
-        "react-bootstrap": "^2.0.0-beta.4",
-        "react-chartjs-2": "^3.0.4",
-        "react-data-table-component": "^7.0.0-rc2",
-        "react-icons": "^4.2.0",
-        "react-loader-spinner": "^4.0.0",
-        "react-router-dom": "^5.2.0",
-        "react-scroll": "^1.8.3",
+        "react-bootstrap": "^2.1.1",
+        "react-chartjs-2": "^4.0.1",
+        "react-data-table-component": "^7.4.7",
+        "react-icons": "^4.3.1",
+        "react-loader-spinner": "^5.1.0",
+        "react-pro-sidebar": "^0.7.1",
+        "react-router-dom": "^6.2.1",
+        "react-scroll": "^1.8.4",
         "react-slick": "^0.28.1",
         "react-transition-group": "^4.4.2",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^5.3.0",
+        "styled-components": "^5.3.3",
         "toastr": "^2.1.4",
-        "yup": "^0.32.9"
+        "yup": "^0.32.11"
     }
 }
